Criei uma nova div
Criei uma div falando sobre os profundos desejos do nosso amigo daniel

--- a/simulador.html
+++ b/simulador.html
@@ -18,7 +18,7 @@
     <button onclick="calcular()" style="color:white; background-color: black; height: 25px;margin-left:35%; border: white;">Calcular Ganhos em potenciais</button>
         </div>
     </div>
-    
+    <div> eu acredito muito que o daniel quer me dar um chup chup </div>
 </body>
 
 </html>
